--- a/EnjoyEat/EnjoyEat/Areas/OrderForHere/Views/OrderLogin/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Areas/OrderForHere/Views/OrderLogin/Index.cshtml
@@ -70,6 +70,7 @@
 				Register: function () {
 					let self = this;
 					reqs = {
+						memberid: 0,
 						lastname: self.lastname,
 						firstname: self.firstname,
 						account: self.account,
