更新聯絡我們

--- a/EnjoyEat/EnjoyEat/Views/ContactUs/ContactUs.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/ContactUs/ContactUs.cshtml
@@ -6,127 +6,164 @@
     <section class="contact">
         <div class="container" data-aos="fade-up">
             <div class="section-title" data-aos="fade-up">
-                    <h2>店家資訊</h2>
-                </div>
-                <div data-aos="fade-up" id="storeLocal">
-                    <div class="row mt-5" id="enjoyEatLocation">
-                        <iframe style="border: 0; width: 50%; height: 350px"
-                                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
-                                frameborder="0"
-                                allowfullscreen></iframe>
-                        <div class="col-lg-4" id="enjoyEatInformation">
-                            <div class="info">
-                                <div class="address">
-                                    <i class="bi bi-geo-alt"></i>
-                                    <h4>地址:</h4>
-                                    <p>A108 Adam Street, New York, NY 535022</p>
-                                </div>
+                <h2>店家資訊</h2>
+            </div>
+            <div data-aos="fade-up" id="storeLocal">
+                <div class="row mt-5" id="enjoyEatLocation">
+                    <iframe style="border: 0; width: 50%; height: 350px"
+                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
+                            frameborder="0"
+                            allowfullscreen></iframe>
+                    <div class="col-lg-4" id="enjoyEatInformation">
+                        <div class="info">
+                            <div class="address">
+                                <i class="bi bi-geo-alt"></i>
+                                <h4>地址:</h4>
+                                <p>A108 Adam Street, New York, NY 535022</p>
+                            </div>
 
-                                <div class="open-hours">
-                                    <i class="bi bi-clock"></i>
-                                    <h4>營業時間:</h4>
-                                    <p>
-                                        Monday-Saturday:<br />
-                                        11:00 AM - 21:00PM
-                                    </p>
-                                </div>
+                            <div class="open-hours">
+                                <i class="bi bi-clock"></i>
+                                <h4>營業時間:</h4>
+                                <p>
+                                    Monday-Saturday:<br />
+                                    11:00 AM - 21:00PM
+                                </p>
+                            </div>
 
-                                <div class="email">
-                                    <i class="bi bi-envelope"></i>
-                                    <h4>Email:</h4>
-                                    <p>thm101team66@gmail.com</p>
-                                </div>
+                            <div class="email">
+                                <i class="bi bi-envelope"></i>
+                                <h4>Email:</h4>
+                                <p>thm101team66@gmail.com</p>
+                            </div>
 
-                                <div class="phone">
-                                    <i class="bi bi-phone"></i>
-                                    <h4>電話:</h4>
-                                    <p>+1 5589 55488 55s</p>
-                                </div>
+                            <div class="phone">
+                                <i class="bi bi-phone"></i>
+                                <h4>電話:</h4>
+                                <p>+1 5589 55488 55s</p>
                             </div>
                         </div>
                     </div>
                 </div>
-             </div>
-                <div class="content section-title" id="customerComment">
-                    <h2>顧客服務</h2>
-                    <br />
-                    <p id="contactQuestion">為追求高水準的服務品質，我們重視每位貴賓的寶貴意見，若您有任何問題或建議，歡迎填寫以下表單與我們聯絡，我們將盡速爲您回覆，謝謝！</p>
-                </div>
-                <div class="row">
-                    <div class="content" id="contactUsForm">
-                        <div class="col-lg-10 mt-5 ">
-                            <form action="forms/contact.php"
-                                  method="post"
-                                  role="form"
-                                  class="php-email-form">
-                                <div class="row">
-                                    <div class="col-md-6 form-group">
-                                        <input type="text"
-                                               name="name"
-                                               class="form-control"
-                                               id="name"
-                                               placeholder="請輸入您的大名"
-                                               required />
-                                    </div>
-                                    <div class="col-md-6 form-group mt-3 mt-md-0">
-                                        <input type="email"
-                                               class="form-control"
-                                               name="email"
-                                               id="email"
-                                               placeholder="請輸入您的Email"
-                                               required />
-                                    </div>
-                                    <div class="col-md-6 form-group">
-                                        <input type="number"
-                                               name="phone"
-                                               class="form-control"
-                                               id="phone"
-                                               placeholder="請輸入您的電話"
-                                               required />
-                                    </div>
-                                    <div class="col-md-6 form-group mt-3 mt-md-0">
-                                        <select class="book-a-table form-control form-select" id="commentOption">
-                                            <option value="" disabled selected>請選擇服務項目</option>
-                                            <option value="2">餐點品質 Food Quality</option>
-                                            <option value="3">服務品質 Service Courtesy</option>
-                                            <option value="4">宴會及餐敘 Banquet/Catering</option>
-                                            <option value="5">其他 Others</option>
-                                        </select>
-                                    </div>
-                                    <div class="form-group mt-3">
-                                        <input type="text"
-                                               class="form-control"
-                                               name="subject"
-                                               id="subject"
-                                               placeholder="請輸入主旨"
-                                               required />
-                                    </div>
-                                    <div class="form-group mt-3">
-                                        <textarea class="form-control"
-                                                  name="message"
-                                                  rows="8"
-                                                  placeholder="內容"
-                                                  required></textarea>
-                                    </div>
-                                    <div class="my-3">
-                                        <div class="loading">Loading</div>
-                                        <div class="error-message"></div>
-                                        <div class="sent-message">
-                                            Your message has been sent. Thank you!
-                                        </div>
-                                    </div>
-                                    <div class="text-center">
-                                        <button type="submit">送出</button>
-                                    </div>
-                                </div>
-                            </form>
+            </div>
+        </div>
+        <div class="content section-title" id="customerComment">
+            <h2>顧客服務</h2>
+            <br />
+            <p id="contactQuestion">為追求高水準的服務品質，我們重視每位貴賓的寶貴意見，若您有任何問題或建議，歡迎填寫以下表單與我們聯絡，我們將盡速爲您回覆，謝謝！</p>
+        </div>
+        <div class="row">
+            <div class="content" id="contactUsForm">
+                <div class="col-lg-10 mt-5 ">
+                    <form role="form"
+                          class="php-email-form">
+                        <div class="row">
+                            <div class="col-md-6 form-group">
+                                <input type="text"
+                                       name="name"
+                                       class="form-control"
+                                       id="name"
+                                       v-model="name"
+                                       placeholder="請輸入您的大名"
+                                       required />
+                            </div>
+                            <div class="col-md-6 form-group mt-3 mt-md-0">
+                                <input type="email"
+                                       class="form-control"
+                                       name="email"
+                                       id="email"
+                                       v-model="email"
+                                       placeholder="請輸入您的Email"
+                                       required />
+                            </div>
+                            <div class="col-md-6 form-group">
+                                <input type="tel"
+                                       name="phone"
+                                       class="form-control"
+                                       id="phone"
+                                       v-model="phone"
+                                       placeholder="請輸入您的電話"
+                                       required />
+                            </div>
+                            <div class="col-md-6 form-group mt-3 mt-md-0">
+                                <select class="book-a-table form-control form-select" id="commentOption" v-model="serviceOption">
+                                    <option value="" disabled selected>請選擇服務項目</option>
+                                    <template v-for="sq in servicelist">
+                                        <option>{{sq.txt}}</option>
+                                    </template>
+                                </select>
+                            </div>
+                            <div class="form-group mt-3">
+                                <input type="text"
+                                       class="form-control"
+                                       name="subject"
+                                       id="subject"
+                                       v-model="subject"
+                                       placeholder="請輸入主旨"
+                                       required />
+                            </div>
+                            <div class="form-group mt-3">
+                                <textarea class="form-control"
+                                          name="message"
+                                          rows="8"
+                                          placeholder="內容"
+                                          v-model="message"
+                                          required></textarea>
+                            </div>
+                            <div class="my-3">
+                                <div class="loading">Loading</div>
+                                <div class="error-message"></div>
+                                @*  <div class="sent-message">
+                                Your message has been sent. Thank you!
+                                </div>*@
+                            </div>
+                            <div class="text-center">
+                                <button id="submitbtn" @@click="submit">送出</button>
+                            </div>
                         </div>
-                    </div>
+                    </form>
                 </div>
-</section>
+            </div>
+        </div>
+    </section>
 </main>
-    <!-- End Contact Section -->
+<!-- End Contact Section -->
 @section Scripts
     {
-    <script src="~/js/reservations.js"></script>
+    <script>
+        let app = new Vue({
+            el: "#contactUsForm",
+            data: {
+                name: "",
+                email: "",
+                phone: "",
+                subject: "",
+                serviceOption: "",
+                message: "",
+                servicelist: [
+                    { value: 1, txt: '餐點品質 Food Quality' },
+                    { value: 2, txt: '服務品質 Service Courtesy' },
+                    { value: 3, txt: '宴會及餐敘 Banquet / Catering' },
+                    { value: 4, txt: '其他 Others' }],
+                },
+            methods: {
+                submit: function () {
+                    let _this = this;
+                    var request = {
+                        CustomerName: _this.name,
+                        Email: _this.email,
+                        Phone: _this.phone,
+                        QuestionKeynote: _this.subject,
+                        ServiceOption: _this.serviceOption,
+                        QuestionContent: _this.message,
+                    }
+                    axios.post("https://localhost:7071/api/ContactUs/PostCustomerService", request)
+                        .then(
+                            response => {
+                                alert(response.data);
+                            })
+                },
+            },
+        })
+    </script>
 }
