--- a/EnjoyEat/EnjoyEat/wwwroot/css/Reservations.css
+++ b/EnjoyEat/EnjoyEat/wwwroot/css/Reservations.css
@@ -77,6 +77,92 @@
     height: 15px;
 }
 
+/*datepicker*/
+.datepicker {
+    width: 100%;
+    border: 0px;
+}
+
+.calendar {
+    margin-left: -5px;
+    left: 0px;
+    padding: .375rem 2.25rem .375rem .75rem;
+}
+
+#datepicker input {
+    height: 38px;
+    color: black;
+    background-color: #fff;
+    border-radius: .25rem;
+    font-weight: 400;
+    line-height: 1.5;
+    width: 100%;
+    margin-left: -5px;
+    display: block;
+    padding: .375rem 2.25rem .375rem .75rem;
+}
+
+input::placeholder {
+    color: red; /* 在這裡更改顏色為你想要的顏色 */
+}
+
+.mx-calendar-content .cell.disabled {
+    background-color: #F2E6E6;
+    font-weight: lighter;
+}
+
+.mx-calendar-content .cell.active {
+    background-color: #721b29;
+}
+
+.mx-datepicker-main {
+    color: #333;
+    font-weight: bold;
+}
+
+.mx-calendar-content .cell:hover {
+    /* background-color: #721B29;
+    color: white;*/
+}
+
+option:disabled {
+    background-color: #F2E6E6;
+    color: #666;
+}
+/*dialog 注意事項視窗*/
+dialog {
+    border: none;
+    box-shadow: 0 2px 6px #ccc;
+    border-radius: 30px;
+}
+
+    dialog::backdrop {
+        background-color: rgba(0, 0, 0, 0.1);
+    }
+
+#ruleContainer {
+    text-align: justify; /*設定左右對齊*/
+}
+
+    #ruleContainer p {
+        margin: 0 0 10px;
+    }
+
+#noticeRule {
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+    #noticeRule p {
+        font-family: "Poppins",sans-serif;
+        font-size: 14px;
+        color: red;
+    }
+
+#finalReservation .nono {
+    background-color: #aaa
+}
+
+/*contactUs頁面*/
 #enjoyEatLocation {
     margin-bottom: 48px;
 }
@@ -112,84 +198,12 @@
     color: #aba18c;
     height: 44px;
 }
-/*datepicker*/
-.datepicker {
-    width: 100%;
-    border: 0px;
-}
-.calendar {
-    margin-left: -5px;
-    left: 0px;
-    padding: .375rem 2.25rem .375rem .75rem;
-}
-#datepicker input {
-    height: 38px;
-    color: black;
-    background-color: #fff;
-    border-radius: .25rem;
-    font-weight: 400;
-    line-height: 1.5;
-    width: 100%;
-    margin-left: -5px;
-    display: block;
-    padding: .375rem 2.25rem .375rem .75rem;
-}
-input::placeholder {
-    color: red; /* 在這裡更改顏色為你想要的顏色 */
-}
 
-.mx-calendar-content .cell.disabled {
-    background-color: #F2E6E6;
-    font-weight: lighter;
-}
-
-.mx-calendar-content .cell.active {
-    background-color: #721b29;
-}
-
-.mx-datepicker-main {
-    color: #333;
-    font-weight: bold;
-}
-
-.mx-calendar-content .cell:hover {
-   /* background-color: #721B29;
-    color: white;*/
-}
-
-option:disabled {
-    background-color: #F2E6E6;
-    color: #666;
-}
-/*dialog 注意事項視窗*/
-dialog {
-    border: none;
-    box-shadow: 0 2px 6px #ccc;
-    border-radius: 30px;
-}
-
-dialog::backdrop {
-    background-color: rgba(0, 0, 0, 0.1);
-}
-
-#ruleContainer {
-    text-align: justify; /*設定左右對齊*/
-}
-
-    #ruleContainer p {
-        margin: 0 0 10px;
-    }
-
-#noticeRule {
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
-}
-
-#noticeRule p {
-    font-family: "Poppins",sans-serif;
-    font-size: 14px;
-    color:red;
-}
-
-#finalReservation .nono {
-    background-color: #aaa
+#submitbtn {
+    background: #cda45e;
+    border: 0;
+    padding: 10px 35px;
+    color: #fff;
+    transition: .4s;
+    border-radius: 50px;
 }
