--- a/EnjoyEat/EnjoyEat/Areas/OrderForHere/Views/OrderLogin/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Areas/OrderForHere/Views/OrderLogin/Index.cshtml
@@ -54,9 +54,11 @@
 
 @section Scripts
 	{
+	<script src="~/axios/axios.min.js"></script>
 	<script src="~/orderforhere/orderforherelogin.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
+@*	<script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>*@
 	<script src="https://cdn.jsdelivr.net/npm/vue2-datepicker@3.11.0/index.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 	<script>
 		var app = new Vue({
 			el: '#dialog',
@@ -69,20 +71,31 @@
 			methods: {
 				Register: function () {
 					let self = this;
-					reqs = {
+					request = {
 						memberid: 0,
 						lastname: self.lastname,
 						firstname: self.firstname,
 						account: self.account,
 						phone: self.phone
-					}
-					fetch("/api/OrderLoginApi/QuickRegister", {
-						method: 'POST',
-						body: JSON.stringify(reqs),
-						headers: new Headers({
-							'Content-type': 'application/json'
-						})
-					}).then(resp => console.log(resp));
+					};
+					//fetch("/api/OrderLoginApi/QuickRegister",{
+					//		method: 'POST',
+					//		body: JSON.stringify(request),
+					//		headers: new Headers({
+					//			'Content-type': 'application/json'
+					//		})
+					//	})
+					//	.then(response => console.log("success", response));
+
+					axios.post('/api/OrderLoginApi/QuickRegister', request, {
+						headers: {
+							'Content-Type': 'application/json'
+						}
+					})
+						.then(response => {
+							console.log('success', response);
+						});
+
 				}
 			}
 		})
