--- a/EnjoyEat/EnjoyEat/Areas/OrderForHere/Views/OrderLogin/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Areas/OrderForHere/Views/OrderLogin/Index.cshtml
@@ -3,6 +3,7 @@
 	<link href="~/orderforhere/orderforherelogincss/orderforhere.css" rel="stylesheet" />
 }
 
+
 <!-- Start  -->
 <div class="form-container" id="Login">
 	<h2>內用點餐</h2>
@@ -71,7 +72,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 	<script>
 		var app = new Vue({
-			el: '#dialog',
+			//el: '#dialog',
 			data: {
 				lastname: '',
 				firstname: '',
@@ -114,17 +115,19 @@
 							} else {
 								//self.showModal = true; // 註冊失敗
 								//self.show = '新增失敗';
-								alert('新增成功');
+								alert('新增失敗');
 							}
 						})
 						.catch(error => {
 							console.error('error', error);
-							self.showFailModal = true; // 註冊失敗
-
+							self.showModal = true; // 註冊失敗
+							alert('新增失敗');
 						});
 				}
 			}
 		})
+		app.$mount('#dialog')
+		app.$mount('#Login')
 	</script>
 }
 
