--- a/EnjoyEat/EnjoyEat/Views/MemberManagement/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/MemberManagement/Index.cshtml
@@ -234,7 +234,8 @@
                                     {{order.tableId}}
                                 </td>
                                 <td>
-                                    <div class="seemore modal fade" id="seemoreModal" tabindex="-1" aria-hidden="true">
+                                    <!-- Modal -->
+                                   @* <div class="seemore modal fade" id="seemoreModal" tabindex="-1" aria-hidden="true">
                                         <div class="modal-dialog modal-dialog-centered">
                                             <div class="modal-content">
                                                 <div class="modal-header border-0">
@@ -257,7 +258,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div>*@
                                 </td>
                             </tr>
 
